--- a/eqdiff.html
+++ b/eqdiff.html
@@ -234,9 +234,9 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-4" class="internal"><span class="codenumber">2.2.2</span> <span class="title">Transformation de l’équation homogène <span class="process-math">\((H)\)</span></span></a></div></li>
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-5" class="internal"><span class="codenumber">2.2.3</span> <span class="title">Problèmes aux limites</span></a></div></li>
 <li class="toc-item toc-subsection">
-<div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-6" class="internal"><span class="codenumber">2.2.4</span> <span class="title">Zéros des solutions d’une EDLS homogène du second ordre</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions" class="internal"><span class="codenumber">2.2.4</span> <span class="title">Zéros des solutions d’une EDLS homogène du second ordre</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-6-3" class="internal"><span class="title">Le cas général</span></a></div></li>
+<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions-3" class="internal"><span class="title">Le cas général</span></a></div></li>
 <li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#subsubsec-equations-normales" class="internal"><span class="title">Cas d’une équation normale</span></a></div></li>
 <li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#subsubsec-" class="internal"><span class="title">Cas d’une équation auto-adjointe et déductions sur le cas général</span></a></div></li>
 </ul>
