--- a/sec-equations-differentielles-lineaires.html
+++ b/sec-equations-differentielles-lineaires.html
@@ -222,9 +222,9 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-4" class="internal"><span class="codenumber">2.2.2</span> <span class="title">Transformation de l’équation homogène <span class="process-math">\((H)\)</span></span></a></div></li>
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-5" class="internal"><span class="codenumber">2.2.3</span> <span class="title">Problèmes aux limites</span></a></div></li>
 <li class="toc-item toc-subsection">
-<div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-6" class="internal"><span class="codenumber">2.2.4</span> <span class="title">Zéros des solutions d’une EDLS homogène du second ordre</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions" class="internal"><span class="codenumber">2.2.4</span> <span class="title">Zéros des solutions d’une EDLS homogène du second ordre</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-6-3" class="internal"><span class="title">Le cas général</span></a></div></li>
+<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions-3" class="internal"><span class="title">Le cas général</span></a></div></li>
 <li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#subsubsec-equations-normales" class="internal"><span class="title">Cas d’une équation normale</span></a></div></li>
 <li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#subsubsec-" class="internal"><span class="title">Cas d’une équation auto-adjointe et déductions sur le cas général</span></a></div></li>
 </ul>
@@ -709,9 +709,9 @@ w'=-itw
 <div class="displaymath process-math">
 \begin{equation*}
 \begin{cases}
-u=ate^{t^2/2} \\
-v=be^{it^2/2} \\
-w=ce^{-it^2/2}
+u=at\e^{t^2/2} \\
+v=b\e^{it^2/2} \\
+w=c\e^{-it^2/2}
 \end{cases}
 \end{equation*}
 </div>
@@ -719,9 +719,9 @@ w=ce^{-it^2/2}
 <div class="displaymath process-math">
 \begin{equation*}
 \begin{cases}
-x=ate^{t^2/2}-2be^{it^2/2}-2ce^{-it^2/2} \\
-y=b(1+i)e^{it^2/2}+c(1-i)e^{-it^2/2} \\
-z=2be^{it^2/2}+2ce^{-it^2/2}
+x=at\e^{t^2/2}-2b\e^{it^2/2}-2c\e^{-it^2/2} \\
+y=b(1+i)\e^{it^2/2}+c(1-i)\e^{-it^2/2} \\
+z=2b\e^{it^2/2}+2c\e^{-it^2/2}
 \end{cases}
 \end{equation*}
 </div>
@@ -729,7 +729,7 @@ z=2be^{it^2/2}+2ce^{-it^2/2}
 <div class="displaymath process-math">
 \begin{equation*}
 \begin{cases}
-x=ate^{t^2/2}-4\alpha\cos(t^2/2)+4\beta\sin(t^2/2) \\
+x=at\e^{t^2/2}-4\alpha\cos(t^2/2)+4\beta\sin(t^2/2) \\
 y=(\alpha-\beta)\cos(t^2/2)+(\alpha+\beta)\sin(t^2/2) \\
 z=4\alpha\cos(t^2/2)-4\beta\sin(t^2/2)
 \end{cases}
@@ -996,11 +996,11 @@ X=PY \\ Y'=RY
 <div class="para">la résolution du système différentiel <span class="process-math">\(X'=AX\)</span> passe donc par celle du système «plus simple» <span class="process-math">\(Y'=RY\text{.}\)</span>
 </div>
 </div>
-<div class="para" id="sec-equations-differentielles-lineaires-7-5-2-1-3-3">Noter aussi que puisque <span class="process-math">\(e^{tA}=Pe^{tR}P^{-1}\)</span> on peut directement fournir les solutions de <span class="process-math">\((SH)\)</span> en calculant <span class="process-math">\(e^{tR}\text{.}\)</span> Ces solutions sont de la forme :</div>
+<div class="para" id="sec-equations-differentielles-lineaires-7-5-2-1-3-3">Noter aussi que puisque <span class="process-math">\(\e^{tA}=P\e^{tR}P^{-1}\)</span> on peut directement fournir les solutions de <span class="process-math">\((SH)\)</span> en calculant <span class="process-math">\(\e^{tR}\text{.}\)</span> Ces solutions sont de la forme :</div>
 <aside class="aside aside-like" id="sec-equations-differentielles-lineaires-7-5-2-1-3-4"><div class="para" id="sec-equations-differentielles-lineaires-7-5-2-1-3-4-1">Quelque soit la méthode de calcul choisie, le calcul explicite de <span class="process-math">\(P^{-1}\)</span> n’est pas nécessaire.</div></aside><div class="para logical" id="sec-equations-differentielles-lineaires-7-5-2-1-3-5">
 <div class="displaymath process-math">
 \begin{equation*}
-t\longmapsto Pe^{tR}W
+t\longmapsto P\e^{tR}W
 \end{equation*}
 </div>
 <div class="para">où <span class="process-math">\(W\)</span> est un vecteur quelconque de <span class="process-math">\(\mathcal M_{n,1}(\K)\text{.}\)</span>
@@ -1012,21 +1012,19 @@ t\longmapsto Pe^{tR}W
 </h4>
 <ol class="decimal" id="sec-equations-differentielles-lineaires-7-6-2">
 <li id="sec-equations-differentielles-lineaires-7-6-2-1">
-<span class="heading"><span class="title">Système fondamental de solution et wronksien.</span></span><div class="para logical" id="sec-equations-differentielles-lineaires-7-6-2-1-2">
-<div class="para">Soient <span class="process-math">\(v_1,v_2,\ldots,v_d\in E\)</span> et posons pour tout <span class="process-math">\(k\in\iic{1,d}\text{,}\)</span> <span class="process-math">\(f_k(t)=\e^{ta}\cdot v_k\text{.}\)</span> <aside class="aside aside-like" id="sec-equations-differentielles-lineaires-7-6-2-1-2-4"><div class="para" id="sec-equations-differentielles-lineaires-7-6-2-1-2-4-1">Ces notions ont toutefois peu d’intérêt dans le cas d’une <abbr class="acronym">EDL</abbr> à coefficients constants car on sait expliciter les solutions.</div></aside>
+<span class="heading"><span class="title">Système fondamental de solution et wronksien.</span></span><div class="para" id="sec-equations-differentielles-lineaires-7-6-2-1-2">Soient <span class="process-math">\(v_1,v_2,\ldots,v_d\in E\)</span> et posons pour tout <span class="process-math">\(k\in\iic{1,d}\text{,}\)</span> <span class="process-math">\(f_k(t)=\e^{ta}\cdot v_k\text{.}\)</span>
 </div>
-<ul class="disc" id="sec-equations-differentielles-lineaires-7-6-2-1-2-5">
-<li id="sec-equations-differentielles-lineaires-7-6-2-1-2-5-1"><div class="para" id="p-derived-sec-equations-differentielles-lineaires-7-6-2-1-2-5-1">
+<aside class="aside aside-like" id="sec-equations-differentielles-lineaires-7-6-2-1-3"><div class="para" id="sec-equations-differentielles-lineaires-7-6-2-1-3-1">Ces notions ont toutefois peu d’intérêt dans le cas d’une <abbr class="acronym">EDL</abbr> à coefficients constants car on sait expliciter les solutions.</div></aside><div class="para logical" id="sec-equations-differentielles-lineaires-7-6-2-1-4"><ul class="disc" id="sec-equations-differentielles-lineaires-7-6-2-1-4-1">
+<li id="sec-equations-differentielles-lineaires-7-6-2-1-4-1-1"><div class="para" id="p-derived-sec-equations-differentielles-lineaires-7-6-2-1-4-1-1">
 <span class="process-math">\((f_1,f_2,\ldots,f_d)\)</span> est un <abbr class="acronym">SFS</abbr> de <span class="process-math">\((H)\)</span> sur <span class="process-math">\(\R\)</span> si et seulement si <span class="process-math">\((v_1,v_2,\ldots,v_d)\)</span> est une base de <span class="process-math">\(E\text{.}\)</span>
 </div></li>
-<li id="sec-equations-differentielles-lineaires-7-6-2-1-2-5-2"><div class="para" id="p-derived-sec-equations-differentielles-lineaires-7-6-2-1-2-5-2">Le wronksien de <span class="process-math">\((f_1,f_2,\ldots,f_d)\)</span> dans la base <span class="process-math">\(\mathcal B\)</span> est donné par<div class="displaymath process-math">
+<li id="sec-equations-differentielles-lineaires-7-6-2-1-4-1-2"><div class="para" id="p-derived-sec-equations-differentielles-lineaires-7-6-2-1-4-1-2">Le wronksien de <span class="process-math">\((f_1,f_2,\ldots,f_d)\)</span> dans la base <span class="process-math">\(\mathcal B\)</span> est donné par<div class="displaymath process-math">
 \begin{equation*}
 \forall t\in\R,\; W(t)=\det\big(\e^{ta}\big)\det_{\mathcal B}(v_1,v_2,\ldots,v_d)
 \end{equation*}
 </div>
 </div></li>
-</ul>
-</div>
+</ul></div>
 </li>
 <li id="sec-equations-differentielles-lineaires-7-6-2-2">
 <span class="heading"><span class="title">Variation des constantes.</span></span><div class="para logical" id="sec-equations-differentielles-lineaires-7-6-2-2-2">
@@ -1042,20 +1040,52 @@ t\longmapsto \e^{ta}\cdot v
 (E)\Longleftrightarrow v'(t)=\e^{-ta}\cdot b(t)
 \end{equation*}
 </div>
-<div class="para">Cette présentation n’offre toutefois pas d’avantage pratique par rapport à la méthode générale de la variation des constantes puisqu’elle exige le calcul de l’exponentielle <span class="process-math">\(e^{-ta}\)</span> et donc le calcul de l’inverse de la matrice de passage dans une base de réduction.</div>
+<div class="para">Cette présentation n’offre toutefois pas d’avantage pratique par rapport à la méthode générale de la variation des constantes puisqu’elle exige le calcul de l’exponentielle <span class="process-math">\(\e^{-ta}\)</span> et donc le calcul de l’inverse de la matrice de passage dans une base de réduction.</div>
 </div>
 </li>
 </ol></article><article class="theorem theorem-like" id="expression-solution-cauchy"><h4 class="heading">
 <span class="type">Théorème</span><span class="space"> </span><span class="codenumber">23</span><span class="period">.</span><span class="space"> </span><span class="title">Expression intégrale de la solution du problème de Cauchy.</span>
 </h4>
-<div class="para logical" id="expression-solution-cauchy-2">
+<div class="para logical" id="expression-solution-cauchy-2-1">
 <div class="para">Soient <span class="process-math">\(t_0\in I\)</span> et <span class="process-math">\(x_0\in E\text{.}\)</span> L’unique solution <span class="process-math">\(f\)</span> de l’équation complète <span class="process-math">\((E)\)</span> vérifiant la condition initiale <span class="process-math">\(f(t_0)=x_0\)</span> est donnée par</div>
 <div class="displaymath process-math">
 \begin{equation*}
 \forall t\in I,\; f(t)=\e^{(t-t_0)a}\cdot x_0+\int_{t_0}^t\e^{(t-s)a}\cdot b(s)\dt s
 \end{equation*}
 </div>
-</div></article></section></section></div>
+</div></article><details id="expression-solution-cauchy-3" class="hiddenproof born-hidden-knowl"><summary class="knowl__link"><h4 class="heading"><span class="type">Démonstration<span class="period">.</span></span></h4></summary><article class="hiddenproof knowl__content"><div class="para logical" id="expression-solution-cauchy-3-1">
+<div class="para">Notons <span class="process-math">\(f\)</span> l’unique solution de <span class="process-math">\((E)\)</span> telle que <span class="process-math">\(f(t_0)=x_0\)</span> et posons</div>
+<div class="displaymath process-math">
+\begin{equation*}
+g(t)=\e^{-ta}\cdot f(t)
+\end{equation*}
+</div>
+<div class="para">La fonction <span class="process-math">\(g\)</span> est de classe <span class="process-math">\(\mathcal C^1\)</span> et on a</div>
+<div class="displaymath process-math" id="expression-solution-cauchy-3-1-7">
+\begin{align*}
+g'(t)\amp =-a\circ \e^{-ta}\cdot f(t)+\e^{-ta}\cdot f'(t)\\
+\amp=
+-a\circ \e^{-ta}\cdot f(t)+\e^{-ta}\cdot\bigl(a\cdot f(t)+b(t)\bigr)\\
+\amp=
+\e^{-ta}\cdots b(t)
+\end{align*}
+</div>
+<div class="para">
+<span class="process-math">\(g\)</span> est donc une primitive de la fonction <span class="process-math">\(t\longmapsto \e^{-ta}\cdots b(t) \text{.}\)</span> Puisque <span class="process-math">\(g(t_0)=\e^{-t_0a}\cdot f(t_0)=\e^{-t_0a}\cdot x_0\)</span> alors</div>
+<div class="displaymath process-math">
+\begin{equation*}
+g(t)=\e^{-t_0a}\cdot x_0+\int_{t_0}^t \e^{-sa}\cdot b(s)\mathrm ds
+\end{equation*}
+</div>
+<div class="para">et donc</div>
+<div class="displaymath process-math" id="expression-solution-cauchy-3-1-12">
+\begin{align*}
+f(t) \amp=
+\e^{ta}\cdot\biggl(\e^{-t_0a}\cdot x_0+\int_{t_0}^t \e^{-sa}\cdot b(s)\mathrm ds\biggr)\\
+\amp= \e^{(t-t_0)a}\cdot x_0+\int_{t_0}^t\e^{(t-s)a}\cdot b(s)\dt s
+\end{align*}
+</div>
+</div></article></details></section></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="ch-eqdiff-cours.html" title="Précédent"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Précédent</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="eqdiff-scal2.html" title="Suivant"><span class="name">Suivant</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
