Latest build deployed.

--- a/knowl/xref/expression-solution-cauchy.html
+++ b/knowl/xref/expression-solution-cauchy.html
@@ -35,11 +35,11 @@ g'(t)\amp =-a\circ \e^{-ta}\cdot f(t)+\e^{-ta}\cdot f'(t)\\
 \amp=
 -a\circ \e^{-ta}\cdot f(t)+\e^{-ta}\cdot\bigl(a\cdot f(t)+b(t)\bigr)\\
 \amp=
-\e^{-ta}\cdots b(t)
+\e^{-ta}\cdot b(t)
 \end{align*}
 </div>
 <div class="para">
-<span class="process-math">\(g\)</span> est donc une primitive de la fonction <span class="process-math">\(t\longmapsto \e^{-ta}\cdots b(t) \text{.}\)</span> Puisque <span class="process-math">\(g(t_0)=\e^{-t_0a}\cdot f(t_0)=\e^{-t_0a}\cdot x_0\)</span> alors</div>
+<span class="process-math">\(g\)</span> est donc une primitive de la fonction <span class="process-math">\(t\longmapsto \e^{-ta}\cdot b(t) \text{.}\)</span> Puisque <span class="process-math">\(g(t_0)=\e^{-t_0a}\cdot f(t_0)=\e^{-t_0a}\cdot x_0\)</span> alors</div>
 <div class="displaymath process-math">
 \begin{equation*}
 g(t)=\e^{-t_0a}\cdot x_0+\int_{t_0}^t \e^{-sa}\cdot b(s)\mathrm ds
