Latest build deployed.

--- a/eqdiff-5-4.html
+++ b/eqdiff-5-4.html
@@ -420,11 +420,11 @@ a(t)y'' + (2a'(t) - b(t))y' + (a''(t) - b'(t) + c(t))y \amp= 0 \quad (H^*)
 \end{equation}
 </div>
 <div class="para" id="eqdiff-5-4-4-5-5-3-4">Ce qui implique que si on peut résoudre <span class="process-math">\((H^*)\text{,}\)</span> alors on peut le faire pour <span class="process-math">\((H)\)</span> et vice versa.</div>
-<details id="eqdiff-5-4-4-5-5-3-5" class="hiddenproof born-hidden-knowl"><summary class="knowl__link"><h6 class="heading"><span class="type">Démonstration<span class="period">.</span></span></h6></summary><article class="hiddenproof knowl__content"><div class="para" id="eqdiff-5-4-4-5-5-3-5-1">Fixons une fonction non nulle <span class="process-math">\(\sigma\)</span> telle que <span class="process-math">\((a\sigma)' = b\sigma\)</span> et considérons une fonction <span class="process-math">\(x\)</span> de classe <span class="process-math">\(\mathcal C^2\)</span> sur <span class="process-math">\(I\text{.}\)</span> Posons <span class="process-math">\(y = \sigma x\text{.}\)</span> Alors</div>
+<details id="eqdiff-5-4-4-5-5-3-5" class="hiddenproof born-hidden-knowl"><summary class="knowl__link"><h6 class="heading"><span class="type">Explication<span class="period">.</span></span></h6></summary><article class="hiddenproof knowl__content"><div class="para" id="eqdiff-5-4-4-5-5-3-5-1">Fixons une fonction non nulle <span class="process-math">\(\sigma\)</span> telle que <span class="process-math">\((a\sigma)' = b\sigma\)</span> et considérons une fonction <span class="process-math">\(x\)</span> de classe <span class="process-math">\(\mathcal C^2\)</span> sur <span class="process-math">\(I\text{.}\)</span> Posons <span class="process-math">\(y = \sigma x\text{.}\)</span> Alors</div>
 <div class="displaymath process-math" id="eqdiff-5-4-4-5-5-3-5-2">
 \begin{equation}
 \begin{aligned}
-(H^*) \amp\Longleftrightarrow amp(ay)'' - (by)' + cy = 0 \\
+(H^*) \amp \Longleftrightarrow (ay)'' - (by)' + cy = 0 \\
 \amp\Longleftrightarrow (a\sigma x)'' - (b\sigma x)' + c\sigma x = 0 \\
 \amp\Longleftrightarrow (a\sigma)x'' + 2(a\sigma)'x' + (a\sigma)''x - (b\sigma)x' - (b\sigma)'x + c\sigma x = 0 \\
 \amp\Longleftrightarrow a\sigma x'' + b\sigma x' + c\sigma x = 0 \quad (\text{car } (a\sigma)' = b\sigma) \\
