--- a/output/web/knowl/xref/act-eqdse.html
+++ b/output/web/knowl/xref/act-eqdse.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <article class="exercise exercise-like"><h3 class="heading">
-<span class="type">Exercice</span><span class="space"> </span><span class="codenumber">11<span class="period">.</span></span><span class="space"> </span><span class="title">solutions DSE d’une EDLS normalisable.</span>
+<span class="type">Exercice</span><span class="space"> </span><span class="codenumber">10<span class="period">.</span></span><span class="space"> </span><span class="title">Solutions DSE d’une EDLS normalisable.</span>
 </h3>
 <div class="introduction"><div class="para logical">
 <div class="para">On considère une EDLS normalisée d’ordre <span class="process-math">\(2\)</span>
