--- a/output/web/knowl/xref/solutions-periodiques-scalar-2nd.html
+++ b/output/web/knowl/xref/solutions-periodiques-scalar-2nd.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <article class="exercise exercise-like"><h3 class="heading">
-<span class="type">Exercice</span><span class="space"> </span><span class="codenumber">14<span class="period">.</span></span><span class="space"> </span><span class="title">Solurions périodiques d’une EDLS du second ordre.</span>
+<span class="type">Exercice</span><span class="space"> </span><span class="codenumber">13<span class="period">.</span></span><span class="space"> </span><span class="title">Solutions périodiques d’une EDLS du second ordre.</span>
 </h3>
 <div class="para">Soit <span class="process-math">\(p\)</span> une fonction continue <span class="process-math">\(T\)</span>-périodique sur <span class="process-math">\(\R\text{.}\)</span> On considère l’équation</div>
 <div class="displaymath process-math">
@@ -25,7 +25,7 @@ x''+p(t)x=0
 </div></li>
 <li><div class="para">Montrer que <span class="process-math">\((H)\)</span> admet au moins une solution <span class="process-math">\(T\)</span>-périodique non nulle si et seulement si <span class="process-math">\(f_1(T)+f_2'(T)=2\text{.}\)</span>
 </div></li>
-<li><div class="para">Montrer que <span class="process-math">\((H)\)</span> admet au moins une solution non nulle <span class="process-math">\(f\)</span> telle que <span class="process-math">\(f(t+T)=-f(t)\)</span> si et seulement si <span class="process-math">\(f_1(T)+f_2'(t)=-2\text{.}\)</span>
+<li><div class="para">Montrer que <span class="process-math">\((H)\)</span> admet au moins une solution non nulle <span class="process-math">\(f\)</span> telle que <span class="process-math">\(f(t+T)=-f(t)\)</span> si et seulement si <span class="process-math">\(f_1(T)+f_2'(T)=-2\text{.}\)</span>
 </div></li>
 </ol>
 <div class="solutions"><details class="solution solution-like born-hidden-knowl"><summary class="knowl__link"><span class="type">Solution</span><span class="period">.</span></summary><div class="solution solution-like knowl__content"><ol class="lower-alpha lower-alpha-level-1" id="solutions-periodiques-scalar-2nd-3-1">
