Latest build deployed.

--- a/eqdiff-5.html
+++ b/eqdiff-5.html
@@ -13,7 +13,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
 <meta property="book:title" content="Equations différentielles linéaires">
-<meta property="book:author" content="You">
 <script src="https://sagecell.sagemath.org/static/embedded_sagecell.js"></script><script>
 var runestoneMathReady = new Promise((resolve) => window.rsMathReady = resolve);
 window.MathJax = {
@@ -128,7 +127,7 @@ eBookConfig.enable_chatcodes =  false;
 <body id="equadiff-25" class="pretext book ignore-math">
 <a class="assistive" href="#ptx-content">Sauter au contenu</a><header id="ptx-masthead" class="ptx-masthead"><div class="ptx-banner"><div class="title-container">
 <h1 class="heading"><a href="eqdiff.html"><span class="title">Equations différentielles linéaires:</span> <span class="subtitle">Classes MP/MP*</span></a></h1>
-<p class="byline">You</p>
+<p class="byline"></p>
 </div></div></header><nav id="ptx-navbar" class="ptx-navbar navbar"><div class="ptx-navbar-contents">
 <button class="toc-toggle button" title="Table des matières"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5d2;</span><span class="name">Table des matières</span></button><div class="searchbox">
 <div class="searchwidget"><button id="searchbutton" class="searchbutton button" type="button" title="Search book"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe8b6;</span><span class="name">Search Book</span></button></div>
@@ -178,75 +177,74 @@ eBookConfig.enable_chatcodes =  false;
 \)</span></div>
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth3 focused" data-preexpanded-levels="1" data-max-levels="3"><ul class="structural toc-item-list contains-active">
-<li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Pages Liminaires</span></a></div></li>
 <li class="toc-item toc-chapter">
-<div class="toc-title-box"><a href="ch-eqdiff-cours.html" class="internal"><span class="codenumber">1</span> <span class="title">Cours</span></a></div>
+<div class="toc-title-box"><a href="ch-eqdiff-cours.html" class="internal"><span class="codenumber">2</span> <span class="title">Cours</span></a></div>
 <ul class="structural toc-item-list">
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Équations différentielles linéaires d’ordre <span class="process-math">\(1\)</span></span></a></div>
+<div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Équations différentielles linéaires d’ordre <span class="process-math">\(1\)</span></span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-3" class="internal"><span class="codenumber">1.1.1</span> <span class="title">Solution d’une équation différentielle linéaire du premier ordre</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-4" class="internal"><span class="codenumber">1.1.2</span> <span class="title">Système fondamental de solutions de l’équation homogène</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-varconst" class="internal"><span class="codenumber">1.1.3</span> <span class="title">Méthode de la variation des constantes</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-7" class="internal"><span class="codenumber">1.1.4</span> <span class="title">Équation différentielle linéaire du premier ordre à coefficients constants</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-4" class="internal"><span class="codenumber">2.1.1</span> <span class="title">Solutions d’une équation différentielle linéaire du premier ordre</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-5" class="internal"><span class="codenumber">2.1.2</span> <span class="title">Système fondamental de solutions de l’équation homogène</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-varconst" class="internal"><span class="codenumber">2.1.3</span> <span class="title">Méthode de la variation des constantes</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-8" class="internal"><span class="codenumber">2.1.4</span> <span class="title">Équation différentielle linéaire du premier ordre à coefficients constants</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="eqdiff-scal2.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Équations différentielles linéaires scalaires, étude générale</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-scal2.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Équations différentielles linéaires scalaires, étude générale</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-scal2.html#eqdiff-scal2-2" class="internal"><span class="codenumber">1.2.1</span> <span class="title">Le cadre général</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-scal2.html#eqdiff-scal2-3" class="internal"><span class="codenumber">1.2.2</span> <span class="title">Le cas d’une équation à coefficients constants</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-scal2.html#eqdiff-scal2-2" class="internal"><span class="codenumber">2.2.1</span> <span class="title">Le cadre général</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-scal2.html#eqdiff-scal2-3" class="internal"><span class="codenumber">2.2.2</span> <span class="title">Le cas d’une équation à coefficients constants</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-eqdiff-cours-5.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Équations linéaires scalaires du deuxième ordre</span></a></div></li>
-<li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-eqdiff-exerises-approfondissement.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercices d’approfondissement</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-eqdiff-cours-4.html" class="internal"><span class="codenumber">2.3</span> <span class="title">Équations linéaires scalaires du deuxième ordre</span></a></div></li>
+<li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-eqdiff-exerises-approfondissement.html" class="internal"><span class="codenumber">2.4</span> <span class="title">Exercices d’approfondissement</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter contains-active">
-<div class="toc-title-box"><a href="eqdiff-5.html" class="internal"><span class="codenumber">2</span> <span class="title">Thèmes classiques</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-5.html" class="internal"><span class="codenumber">3</span> <span class="title">Thèmes classiques</span></a></div>
 <ul class="structural toc-item-list active">
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="eqdiff-5-3.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Équation et applications résolvantes</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-5-3.html" class="internal"><span class="codenumber">3.1</span> <span class="title">Équation et applications résolvantes</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-4" class="internal"><span class="codenumber">2.1.1</span> <span class="title">Équation résolvante de <span class="process-math">\((H)\)</span></span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-5" class="internal"><span class="codenumber">2.1.2</span> <span class="title">Application résolvante de <span class="process-math">\((H)\)</span></span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-6" class="internal"><span class="codenumber">2.1.3</span> <span class="title">Résolvante et équation complète</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-7" class="internal"><span class="codenumber">2.1.4</span> <span class="title">Résolvantes d’une équation à coefficients constants</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-8" class="internal"><span class="codenumber">2.1.5</span> <span class="title">Solutions périodiques d’une EDL périodique</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-4" class="internal"><span class="codenumber">3.1.1</span> <span class="title">Équation résolvante de <span class="process-math">\((H)\)</span></span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-5" class="internal"><span class="codenumber">3.1.2</span> <span class="title">Application résolvante de <span class="process-math">\((H)\)</span></span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-6" class="internal"><span class="codenumber">3.1.3</span> <span class="title">Résolvante et équation complète</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-7" class="internal"><span class="codenumber">3.1.4</span> <span class="title">Résolvantes d’une équation à coefficients constants</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-8" class="internal"><span class="codenumber">3.1.5</span> <span class="title">Solutions périodiques d’une EDL périodique</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="eqdiff-5-4.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Thèmes sur les équations scalaires du deuxième ordre</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-5-4.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Thèmes sur les équations scalaires du deuxième ordre</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-3" class="internal"><span class="codenumber">2.2.1</span> <span class="title">Solutions développables en séries entières</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-4" class="internal"><span class="codenumber">2.2.2</span> <span class="title">Transformation de l’équation homogène <span class="process-math">\((H)\)</span></span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-5" class="internal"><span class="codenumber">2.2.3</span> <span class="title">Problèmes aux limites</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-3" class="internal"><span class="codenumber">3.2.1</span> <span class="title">Solutions développables en séries entières</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-4" class="internal"><span class="codenumber">3.2.2</span> <span class="title">Transformation de l’équation homogène <span class="process-math">\((H)\)</span></span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-5" class="internal"><span class="codenumber">3.2.3</span> <span class="title">Problèmes aux limites</span></a></div></li>
 <li class="toc-item toc-subsection">
-<div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions" class="internal"><span class="codenumber">2.2.4</span> <span class="title">Zéros des solutions d’une EDLS homogène du second ordre</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions" class="internal"><span class="codenumber">3.2.4</span> <span class="title">Zéros des solutions d’une EDLS homogène du second ordre</span></a></div>
 <ul class="structural toc-item-list">
 <li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions-3" class="internal"><span class="title">Le cas général</span></a></div></li>
 <li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#subsubsec-equations-normales" class="internal"><span class="title">Cas d’une équation normale</span></a></div></li>
 <li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#subsubsec-" class="internal"><span class="title">Cas d’une équation auto-adjointe et déductions sur le cas général</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-7" class="internal"><span class="codenumber">2.2.5</span> <span class="title">Solutions périodique d’une EDLS du second ordre périodique</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-7" class="internal"><span class="codenumber">3.2.5</span> <span class="title">Solutions périodique d’une EDLS du second ordre périodique</span></a></div></li>
 </ul>
 </li>
 </ul>
 </li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-eqdiff-exercices.html" class="internal"><span class="codenumber">3</span> <span class="title">Exercices</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-eqdiff-exercices.html" class="internal"><span class="codenumber">4</span> <span class="title">Exercices</span></a></div></li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="eqdiff-5"><h2 class="heading">
-<span class="type">Chapitre</span><span class="space"> </span><span class="codenumber">2</span><span class="space"> </span><span class="title">Thèmes classiques</span>
+<span class="type">Chapitre</span><span class="space"> </span><span class="codenumber">3</span><span class="space"> </span><span class="title">Thèmes classiques</span>
 </h2>
 <article class="objectives goal-like" id="eqdiff-5-2"><h2 class="heading"><span class="type">Objectifs</span></h2>
 <div class="introduction" id="eqdiff-5-2-1">
 <div class="para" id="eqdiff-5-2-1-1">Ce chapitre propose une initiation à certaines thèmatiques liées aux <dfn class="terminology">EDL</dfn>. Des notions qui sont abordées sous différentes formes dans les sujets de concours qui traitent des équations différentielles.</div>
-<div class="para" id="eqdiff-5-2-1-2">Les résultats sont exposés sous forme de cours (hors programme) et la plupart sont démontré dans les exercices proposés dans la section <a href="sec-eqdiff-exerises-approfondissement.html" class="internal" title="Exercices 1.4: Exercices d’approfondissement">Exercices 1.4</a>.</div>
+<div class="para" id="eqdiff-5-2-1-2">Les résultats sont exposés sous forme de cours (hors programme) et la plupart sont démontré dans les exercices proposés dans la section <a href="sec-eqdiff-exerises-approfondissement.html" class="internal" title="Exercices 2.4: Exercices d’approfondissement">Exercices 2.4</a>.</div>
 </div></article><nav class="summary-links"><ul>
-<li><a href="eqdiff-5-3.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Équation et applications résolvantes</span></a></li>
-<li><a href="eqdiff-5-4.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Thèmes sur les équations scalaires du deuxième ordre</span></a></li>
+<li><a href="eqdiff-5-3.html" class="internal"><span class="codenumber">3.1</span> <span class="title">Équation et applications résolvantes</span></a></li>
+<li><a href="eqdiff-5-4.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Thèmes sur les équations scalaires du deuxième ordre</span></a></li>
 </ul></nav></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="sec-eqdiff-exerises-approfondissement.html" title="Précédent"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Précédent</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="eqdiff-5-3.html" title="Suivant"><span class="name">Suivant</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
