--- a/ch-eqdiff-cours.html
+++ b/ch-eqdiff-cours.html
@@ -13,7 +13,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
 <meta property="book:title" content="Equations différentielles linéaires">
-<meta property="book:author" content="You">
+<meta property="book:author" content="Sadik Boujaida">
 <script src="https://sagecell.sagemath.org/static/embedded_sagecell.js"></script><script>
 var runestoneMathReady = new Promise((resolve) => window.rsMathReady = resolve);
 window.MathJax = {
@@ -128,7 +128,7 @@ eBookConfig.enable_chatcodes =  false;
 <body id="equadiff-25" class="pretext book ignore-math">
 <a class="assistive" href="#ptx-content">Sauter au contenu</a><header id="ptx-masthead" class="ptx-masthead"><div class="ptx-banner"><div class="title-container">
 <h1 class="heading"><a href="eqdiff.html"><span class="title">Equations différentielles linéaires:</span> <span class="subtitle">Classes MP/MP*</span></a></h1>
-<p class="byline">You</p>
+<p class="byline">Sadik Boujaida</p>
 </div></div></header><nav id="ptx-navbar" class="ptx-navbar navbar"><div class="ptx-navbar-contents">
 <button class="toc-toggle button" title="Table des matières"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5d2;</span><span class="name">Table des matières</span></button><div class="searchbox">
 <div class="searchwidget"><button id="searchbutton" class="searchbutton button" type="button" title="Search book"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe8b6;</span><span class="name">Search Book</span></button></div>
@@ -185,10 +185,10 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Équations différentielles linéaires d’ordre <span class="process-math">\(1\)</span></span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-3" class="internal"><span class="codenumber">1.1.1</span> <span class="title">Solution d’une équation différentielle linéaire du premier ordre</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-4" class="internal"><span class="codenumber">1.1.2</span> <span class="title">Système fondamental de solutions de l’équation homogène</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-4" class="internal"><span class="codenumber">1.1.1</span> <span class="title">Solutions d’une équation différentielle linéaire du premier ordre</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-5" class="internal"><span class="codenumber">1.1.2</span> <span class="title">Système fondamental de solutions de l’équation homogène</span></a></div></li>
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-varconst" class="internal"><span class="codenumber">1.1.3</span> <span class="title">Méthode de la variation des constantes</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-7" class="internal"><span class="codenumber">1.1.4</span> <span class="title">Équation différentielle linéaire du premier ordre à coefficients constants</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-equations-differentielles-lineaires.html#sec-equations-differentielles-lineaires-8" class="internal"><span class="codenumber">1.1.4</span> <span class="title">Équation différentielle linéaire du premier ordre à coefficients constants</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-section">
@@ -198,38 +198,38 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-scal2.html#eqdiff-scal2-3" class="internal"><span class="codenumber">1.2.2</span> <span class="title">Le cas d’une équation à coefficients constants</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-eqdiff-cours-5.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Équations linéaires scalaires du deuxième ordre</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="ch-eqdiff-cours-4.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Équations linéaires scalaires du deuxième ordre</span></a></div></li>
 <li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-eqdiff-exerises-approfondissement.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercices d’approfondissement</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter">
-<div class="toc-title-box"><a href="eqdiff-5.html" class="internal"><span class="codenumber">2</span> <span class="title">Thèmes classiques</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-6.html" class="internal"><span class="codenumber">2</span> <span class="title">Thèmes classiques</span></a></div>
 <ul class="structural toc-item-list">
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="eqdiff-5-3.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Équation et applications résolvantes</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-6-3.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Équation et applications résolvantes</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-4" class="internal"><span class="codenumber">2.1.1</span> <span class="title">Équation résolvante de <span class="process-math">\((H)\)</span></span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-5" class="internal"><span class="codenumber">2.1.2</span> <span class="title">Application résolvante de <span class="process-math">\((H)\)</span></span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-6" class="internal"><span class="codenumber">2.1.3</span> <span class="title">Résolvante et équation complète</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-7" class="internal"><span class="codenumber">2.1.4</span> <span class="title">Résolvantes d’une équation à coefficients constants</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-3.html#eqdiff-5-3-8" class="internal"><span class="codenumber">2.1.5</span> <span class="title">Solutions périodiques d’une EDL périodique</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-3.html#eqdiff-6-3-4" class="internal"><span class="codenumber">2.1.1</span> <span class="title">Équation résolvante de <span class="process-math">\((H)\)</span></span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-3.html#eqdiff-6-3-5" class="internal"><span class="codenumber">2.1.2</span> <span class="title">Application résolvante de <span class="process-math">\((H)\)</span></span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-3.html#eqdiff-6-3-6" class="internal"><span class="codenumber">2.1.3</span> <span class="title">Résolvante et équation complète</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-3.html#eqdiff-6-3-7" class="internal"><span class="codenumber">2.1.4</span> <span class="title">Résolvantes d’une équation à coefficients constants</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-3.html#eqdiff-6-3-8" class="internal"><span class="codenumber">2.1.5</span> <span class="title">Solutions périodiques d’une EDL périodique</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="eqdiff-5-4.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Thèmes sur les équations scalaires du deuxième ordre</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-6-4.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Thèmes sur les équations scalaires du deuxième ordre</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-3" class="internal"><span class="codenumber">2.2.1</span> <span class="title">Solutions développables en séries entières</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-4" class="internal"><span class="codenumber">2.2.2</span> <span class="title">Transformation de l’équation homogène <span class="process-math">\((H)\)</span></span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-5" class="internal"><span class="codenumber">2.2.3</span> <span class="title">Problèmes aux limites</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-4.html#eqdiff-6-4-3" class="internal"><span class="codenumber">2.2.1</span> <span class="title">Solutions développables en séries entières</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-4.html#eqdiff-6-4-4" class="internal"><span class="codenumber">2.2.2</span> <span class="title">Transformation de l’équation homogène <span class="process-math">\((H)\)</span></span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-4.html#eqdiff-6-4-5" class="internal"><span class="codenumber">2.2.3</span> <span class="title">Problèmes aux limites</span></a></div></li>
 <li class="toc-item toc-subsection">
-<div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions" class="internal"><span class="codenumber">2.2.4</span> <span class="title">Zéros des solutions d’une EDLS homogène du second ordre</span></a></div>
+<div class="toc-title-box"><a href="eqdiff-6-4.html#sec-zeros-des-solutions" class="internal"><span class="codenumber">2.2.4</span> <span class="title">Zéros des solutions d’une EDLS homogène du second ordre</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#sec-zeros-des-solutions-3" class="internal"><span class="title">Le cas général</span></a></div></li>
-<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#subsubsec-equations-normales" class="internal"><span class="title">Cas d’une équation normale</span></a></div></li>
-<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#subsubsec-" class="internal"><span class="title">Cas d’une équation auto-adjointe et déductions sur le cas général</span></a></div></li>
+<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-6-4.html#sec-zeros-des-solutions-3" class="internal"><span class="title">Le cas général</span></a></div></li>
+<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-6-4.html#subsubsec-equations-normales" class="internal"><span class="title">Cas d’une équation normale</span></a></div></li>
+<li class="toc-item toc-subsubsection"><div class="toc-title-box"><a href="eqdiff-6-4.html#subsubsec-" class="internal"><span class="title">Cas d’une équation auto-adjointe et déductions sur le cas général</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-5-4.html#eqdiff-5-4-7" class="internal"><span class="codenumber">2.2.5</span> <span class="title">Solutions périodique d’une EDLS du second ordre périodique</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="eqdiff-6-4.html#eqdiff-6-4-7" class="internal"><span class="codenumber">2.2.5</span> <span class="title">Solutions périodique d’une EDLS du second ordre périodique</span></a></div></li>
 </ul>
 </li>
 </ul>
@@ -240,25 +240,10 @@ eBookConfig.enable_chatcodes =  false;
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="ch-eqdiff-cours"><h2 class="heading">
 <span class="type">Chapitre</span><span class="space"> </span><span class="codenumber">1</span><span class="space"> </span><span class="title">Cours</span>
 </h2>
-<section class="introduction" id="ch-eqdiff-cours-2"><h2 class="heading">Conventions et notations.<span></span>
-</h2>
-<div class="para logical" id="ch-eqdiff-cours-2-2"><ul class="disc" id="ch-eqdiff-cours-2-2-1">
-<li id="ch-eqdiff-cours-2-2-1-1"><div class="para" id="p-derived-ch-eqdiff-cours-2-2-1-1">
-<span class="process-math">\(E\)</span> désignera un <span class="process-math">\(\K\)</span>-evn de dimension finie non nulle <span class="process-math">\(d\text{.}\)</span>
-</div></li>
-<li id="ch-eqdiff-cours-2-2-1-2"><div class="para" id="p-derived-ch-eqdiff-cours-2-2-1-2">On fixe une base <span class="process-math">\(\mathcal B=(e_1,e_2,\ldots,e_d)\)</span> de <span class="process-math">\(E\text{.}\)</span>
-</div></li>
-<li id="ch-eqdiff-cours-2-2-1-3"><div class="para" id="p-derived-ch-eqdiff-cours-2-2-1-3">
-<span class="process-math">\(I\)</span> sera un intervalle non trivial de <span class="process-math">\(\R\text{.}\)</span>
-</div></li>
-<li id="ch-eqdiff-cours-2-2-1-4"><div class="para" id="p-derived-ch-eqdiff-cours-2-2-1-4">On notera <span class="process-math">\(\mathcal C^k(I,E)\)</span> l’ensemble des fonctions de classe <span class="process-math">\(\mathcal C^k\)</span> de <span class="process-math">\(I\)</span> dans <span class="process-math">\(E\text{.}\)</span>
-</div></li>
-<li id="ch-eqdiff-cours-2-2-1-5"><div class="para" id="p-derived-ch-eqdiff-cours-2-2-1-5">Pour tout <span class="process-math">\(u\in\mathcal L(E)\)</span> et <span class="process-math">\(h\in E\text{,}\)</span> on notera <span class="process-math">\(u\cdot h\)</span> le vecteur <span class="process-math">\(u(h)\text{.}\)</span>
-</div></li>
-</ul></div></section><nav class="summary-links"><ul>
+<nav class="summary-links"><ul>
 <li><a href="sec-equations-differentielles-lineaires.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Équations différentielles linéaires d’ordre <span class="process-math">\(1\)</span></span></a></li>
 <li><a href="eqdiff-scal2.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Équations différentielles linéaires scalaires, étude générale</span></a></li>
-<li><a href="ch-eqdiff-cours-5.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Équations linéaires scalaires du deuxième ordre</span></a></li>
+<li><a href="ch-eqdiff-cours-4.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Équations linéaires scalaires du deuxième ordre</span></a></li>
 <li><a href="sec-eqdiff-exerises-approfondissement.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercices d’approfondissement</span></a></li>
 </ul></nav></section></div>
 <div class="ptx-content-footer">
