--- a/eqdiff-6.html
+++ b/eqdiff-6.html
@@ -8,7 +8,7 @@
 <html lang="fr-FR" dir="ltr">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>License</title>
+<title>Thèmes classiques</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
@@ -141,7 +141,7 @@ eBookConfig.enable_chatcodes =  false;
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="backmatter.html" title="Précédent"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Précédent</span></a><a class="up-button button" href="backmatter.html" title="Haut"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Haut</span></a><span class="next-button button disabled"><span class="name">Suivant</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></span></span>
+<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="sec-eqdiff-exerises-approfondissement.html" title="Précédent"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Précédent</span></a><a class="up-button button" href="eqdiff.html" title="Haut"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Haut</span></a><a class="next-button button" href="eqdiff-6-3.html" title="Suivant"><span class="name">Suivant</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\require{mathtools}\require{empheq}\newcommand{\N}{\mathbb N}
 \newcommand{\Z}{\mathbb Z}
 \newcommand{\Q}{\mathbb Q}
@@ -202,9 +202,9 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-eqdiff-exerises-approfondissement.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercices d’approfondissement</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="eqdiff-6.html" class="internal"><span class="codenumber">2</span> <span class="title">Thèmes classiques</span></a></div>
-<ul class="structural toc-item-list">
+<ul class="structural toc-item-list active">
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="eqdiff-6-3.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Équation et applications résolvantes</span></a></div>
 <ul class="structural toc-item-list">
@@ -237,12 +237,19 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-eqdiff-exercices.html" class="internal"><span class="codenumber">3</span> <span class="title">Exercices</span></a></div></li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="colophon" id="backmatter-2"><h2 class="heading hide-type">
-<span class="type">License</span><span class="space"> </span><span class="codenumber"></span><span class="space"> </span><span class="title">License</span>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="eqdiff-6"><h2 class="heading">
+<span class="type">Chapitre</span><span class="space"> </span><span class="codenumber">2</span><span class="space"> </span><span class="title">Thèmes classiques</span>
 </h2>
-<div class="para" id="backmatter-2-1">This book was authored in PreTeXt.</div></section></div>
+<article class="objectives goal-like" id="eqdiff-6-2"><h2 class="heading"><span class="type">Objectifs</span></h2>
+<div class="introduction" id="eqdiff-6-2-1">
+<div class="para" id="eqdiff-6-2-1-1">Ce chapitre propose une initiation à certaines thèmatiques liées aux <dfn class="terminology">EDL</dfn>. Des notions qui sont abordées sous différentes formes dans les sujets de concours qui traitent des équations différentielles.</div>
+<div class="para" id="eqdiff-6-2-1-2">Les résultats sont exposés sous forme de cours (hors programme) et la plupart sont démontré dans les exercices proposés dans la section <a href="sec-eqdiff-exerises-approfondissement.html" class="internal" title="Exercices 1.4: Exercices d’approfondissement">Exercices 1.4</a>.</div>
+</div></article><nav class="summary-links"><ul>
+<li><a href="eqdiff-6-3.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Équation et applications résolvantes</span></a></li>
+<li><a href="eqdiff-6-4.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Thèmes sur les équations scalaires du deuxième ordre</span></a></li>
+</ul></nav></section></div>
 <div class="ptx-content-footer">
-<a class="previous-button button" href="backmatter.html" title="Précédent"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Précédent</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Suivant</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></span>
+<a class="previous-button button" href="sec-eqdiff-exerises-approfondissement.html" title="Précédent"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Précédent</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="eqdiff-6-3.html" title="Suivant"><span class="name">Suivant</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
